Code/Cloudformation/template_web.yaml

Description: IaC web 27-07-2022

Parameters: 
  InsEnv:
    Description: "Instance Enviroment"
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - test
      
Mappings:
  EnvironmentToInstanceType:
    dev:
      InstanceType: t2.micro
    test:
      InstanceType: t2.micro

Resources:
  WebEC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-02ee763250491e04a
      InstanceType: 
        #Fn::FindInMap:
        !FindInMap [EnvironmentToInstanceType, !Ref InsEnv, InstanceType 
        ]
      SecurityGroupIds: 
        - !Ref WebEC2SecurityGroup
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            sudo apt-get update -y
            sudo apt-get install -y apache2
            sudo ufw allow -y 'Apache'
            sudo systemctl start apache2
            sudo systemctl enable apache2
            echo Enviroment Website: ${InsEnv} > /var/www/html/index.html

  WebEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access and HTTP access on the inbound port
      GroupName: AllowAllTraffic
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
Outputs:
  PublicIp:
    Value: !GetAtt [WebEC2, PublicIp]
  WebsiteEC2:
    Value: !Sub "http://${WebEC2.PublicIp}"
